processed/gerrit/txt_full/59600.txt
Change:     59600
Subject:    LU-12345 llite: add client-side IT_WRITE_LEASE support
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/59600
Change-Id:  I6f1659ca1b5383f5027d6ffca9d68c3f8964aabf
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      Patrick Farrell
Created:    2025-06-05 19:57:12.000000000
Updated:    2025-06-15 02:21:50.000000000
Patch Set:  1
Insertions: +44
Deletions:  -2
Comments:   11 (0 unresolved)

--- Commit Message ---
LU-12345 llite: add client-side IT_WRITE_LEASE support

This patch implements client-side support for write lease
intents in the Lustre file system. Write leases provide
exclusive write access to files, preventing concurrent
modifications and ensuring data consistency.

The implementation adds:
- IT_WRITE_LEASE intent constant definition
- Client-side intent processing in write operations
- Debug string mapping for write lease intents
- Proper error handling in MDC layer

The write path now uses IT_WRITE_LEASE intents when
performing write operations, allowing the server to
grant exclusive write access and coordinate between
multiple clients.

This is the first part of write lease implementation,
providing the client-side infrastructure. Server-side
lease management will be added in subsequent patches.

Signed-off-by: Patrick Farrell <pfarrell@whamcloud.com>
Change-Id: I6f1659ca1b5383f5027d6ffca9d68c3f8964aabf

--- Review History ---

--- Message (Patrick Farrell, 2025-06-05 19:57:12.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2025-06-05 19:58:32.000000000) ---
Patch Set 1:

(5 comments)

5 style warning(s).
For more details please see https://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Lustre Gerrit Janitor, 2025-06-05 20:05:32.000000000) ---
Patch Set 1:

(6 comments)

centos7: Compile failed

rocky8.10: Compile failed


 Job output URL: https://testing.whamcloud.com/gerrit-janitor/52258/results.html

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-06-05 20:20:37.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

 make[4]: *** [scripts/Makefile.build:249: /home/green/git/lustre-release/lustre/mdc/mdc_locks.o] Error 1
make[4]: *** [scripts/Makefile.build:249: /home/green/git/lustre-release/lustre/llite/file.o] Error 1
make[3]: *** [scripts/Makefile.build:478: /home/green/git/lustre-release/lustre/mdc] Error 2
make[3]: *** [scripts/Makefile.build:478: /home/green/git/lustre-release/lustre/llite] Error 2
make[2]: *** [scripts/Makefile.build:478: /home/green/git/lustre-release/lustre] Error 2
make[1]: *** [Makefile:1944: /home/green/git/lustre-release] Error 2
make: *** [autoMakefile:1232: modules] Error 2
 /home/green/git/lustre-release/lustre/mdc/mdc_locks.c: In function ГўВҖВҳmdc_enqueue_baseГўВҖВҷ:
 /home/green/git/lustre-release/lustre/mdc/mdc_locks.c:1019:52: error: ГўВҖВҳMDS_INODELOCK_WRITE_LEASEГўВҖВҷ undeclared (first use in this function); did you mean ГўВҖВҳMDS_INODELOCK_UPDATEГўВҖВҷ?
  1019 |                                   .l_inodebits = { MDS_INODELOCK_WRITE_LEASE } };
       |                                                    ^~~~~~~~~~~~~~~~~~~~~~~~~
       |                                                    MDS_INODELOCK_UPDATE
 /home/green/git/lustre-release/lustre/mdc/mdc_locks.c:1019:52: note: each undeclared identifier is reported only once for each function it appears in
 /home/green/git/lustre-release/lustre/mdc/mdc_locks.c:1042:38: error: ГўВҖВҳIT_WRITE_LEASEГўВҖВҷ undeclared (first use in this function)
  1042 |                 else if (it->it_op & IT_WRITE_LEASE)
       |                                      ^~~~~~~~~~~~~~
 /home/green/git/lustre-release/lustre/mdc/mdc_locks.c: In function ГўВҖВҳmdc_finish_intent_lockГўВҖВҷ:
 /home/green/git/lustre-release/lustre/mdc/mdc_locks.c:1302:52: error: ГўВҖВҳIT_WRITE_LEASEГўВҖВҷ undeclared (first use in this function)
  1302 |         if (it->it_op & (IT_GETXATTR | IT_LAYOUT | IT_WRITE_LEASE)) {
       |                                                    ^~~~~~~~~~~~~~

--- Message (jenkins, 2025-06-05 20:30:55.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/113985/ : FAILURE

--- Message (Patrick Farrell, 2025-06-15 02:21:50.000000000) ---
Abandoned

Replaced
